2008-05-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* www/doc/manual/src: Added new listings package to complete the
	manual build environment. 

	* tcl/20-xorb-procs.tcl: Finally, provide compatibility to naming
	scheme of message types as used by acs-workflow (at least, some
	older versions). Once, you have got acs-workflow installed,
	previous xorb versions might fail or show irritating behaviour as
	they could not handle the four-element scheme to name message
	types. The issue was originally reported by Malte and Emma, thanks
	to you guys for raising hands.

2008-03-26  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Introduced ::xo::library and articulated first file-level
	dependencies.

	* Bumped version number to 0.5d.

	* In XOTcl 1.6+, the semantics of some info subcommands accepting
	string-match kind of patterns has changed (or is more in line with
	Tcl's info) as they return a list of pattern matches rather than
	boolean values. Needed to modify use of some "Class info superclass"
	occurrences.

2008-03-11  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/10-xorb-exceptions-procs.tcl: LoggableException.__classDoc__
	is now defaulted to an empty string, to avoid errors due to
	non-intialisation of this very variable. Thanks to Michael
	Totschnig for reporting.
	Besides, we now report the error stack in both debug and non-debug
	mode. Thanks, again, to Michael Totschnig for the justified
	objection to former default behaviour.

	* tcl/20-xorb-procs.tcl: ::xorb::Abstract->arguments are now
	trimmed for possible dashes before being streamed for storage in
	the back-end. This is promising to increase robustness of the
	::xorb::Abstract interface, allowing for intended or erroneous use
	of dashes when declaring the record parts of the explicit
	interfaces.
	Abstract->stream(): Provide for defaulting of return value
	flags. This was a missing bit, having been intended since the 0.4